[gd_scene load_steps=7 format=2]

[ext_resource path="res://challenges/week6/gfx/soundSource/radio.webp" type="Texture" id=1]
[ext_resource path="res://challenges/week6/scenes/soundSource/soundSource.gd" type="Script" id=2]
[ext_resource path="res://common/gfx/particle/nota.webp" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15, 12.5 )

[sub_resource type="CircleShape2D" id=1]
radius = 250.0

[sub_resource type="Animation" id=5]
resource_name = "Pickcable"

[node name="soundSource" type="Area2D"]
input_pickable = false
monitoring = false
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6.5 )
shape = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="soundArea" type="Area2D" parent="."]
visible = false
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="soundArea"]
shape = SubResource( 1 )

[node name="music" type="CPUParticles2D" parent="."]
amount = 5
local_coords = false
texture = ExtResource( 3 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, -50 )
initial_velocity = 40.0
initial_velocity_random = 1.0
angular_velocity = 30.57
angular_velocity_random = 0.84
orbit_velocity = 0.1
orbit_velocity_random = 0.5
scale_amount = 0.5
scale_amount_random = 0.1
color = Color( 0, 0, 0, 0.556863 )

[node name="SoundSourceAnimations" type="AnimationPlayer" parent="."]
anims/Pickcable = SubResource( 5 )

[connection signal="area_entered" from="soundArea" to="." method="_on_soundArea_area_entered"]
[connection signal="area_exited" from="soundArea" to="." method="_on_soundArea_area_exited"]
